kubernetes/apps/kube-system/cilium/policies/allow-gatus-egress.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-gatus-egress
spec:
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: observability
      app.kubernetes.io/name: gatus
  egress:
    # ICMP : LIN-NAS-01 (10.25.30.1)
    - toCIDR:
        - 10.25.30.0/24
      icmps:
        - fields:
            - type: 8
              family: IPv4
    - toCIDR:
        - 10.25.30.0/24
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
            # API Proxmox (10.25.30.20)
            - port: "8006"
              protocol: TCP
